<resources>
    <string name="app_name">Borrowers</string>

    <string name="menu_item_history">History</string>
    <string name="edit_text_hint_name">Name</string>
    <string name="edit_text_hint_debt">Debt</string>
    <string name="button_delete">Delete</string>
    <string name="button_approve">Approve</string>
    <string name="button_cancel">Cancel</string>
    <string name="about_developer">Developer:</string>
    <string name="about_dev_name">Asylzhan Seytbek</string>
    <string name="about_email">Email:</string>
    <string name="about_dev_email">asyl.zed.han@gmail.com</string>

    <string name="history">History</string>
</resources>