<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_custom_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_size_16x"
    android:paddingVertical="@dimen/padding_size_24x"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_app_launcher"
        />

    <TextView
        android:id="@+id/layout_about_bottom_sheet_text_view_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_size_10x"
        android:textSize="@dimen/text_size_18x"
        android:textColor="@color/colorPrimary"
        tools:text="Version 1.1.0"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_24x"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_size_10x"
            android:text="@string/about_developer"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_18x"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_dev_name"
            android:textSize="@dimen/text_size_18x"
            android:textColor="@color/gray"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_10x"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_size_10x"
            android:text="@string/about_email"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_18x"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_dev_email"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_18x"
            />

    </LinearLayout>
</LinearLayout>